Fix align of cards

--- a/src/module/catalog/src/visualization/components/Sandbox/index.scss
+++ b/src/module/catalog/src/visualization/components/Sandbox/index.scss
@@ -73,7 +73,7 @@
                         flex-direction: column;
                     }
                     .btn{
-                        margin: 5px;
+                        margin: 5px 0;
                     }
                 }
 
